--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vanilla-Javascript-Exercise</title>
   <style>
-    body { text-align: center; }
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,300&display=swap');;
+    body { text-align: center; font-family: 'Roboto', sans-serif; }
     section { margin: auto; width: 400px; }
-    header { margin: 32px; font-size: 28px; font-weight: bold;}
+    header { margin: 32px; }
     a { color: black; font-size: 20px; }
     li { text-align: left;}
 
@@ -15,7 +16,7 @@
 </head>
 <body>
   <section>
-    <header>Vanilla Javascript Exercise</header>
+    <h1>Vanilla Javascript Exercise</h1>
     <ul>
       <li><a href='./Shopping List/index.html'>Shopping List</a></li>
     </ul>
