--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vanilla-Javascript-Exercise</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,300&display=swap');;
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,300&display=swap');
     body { text-align: center; font-family: 'Roboto', sans-serif; }
     section { margin: auto; width: 400px; }
     header { margin: 32px; }
     a { color: black; font-size: 20px; }
-    li { text-align: left;}
-
+    li { text-align: left; }
   </style>
 </head>
 <body>
