--- a/Game/index.html
+++ b/Game/index.html
@@ -27,7 +27,7 @@
   </section>
   <section class="pop-up pop-up__hide">
     <button class="pop-up__refresh"><i class="fas fa-redo"></i></button>
-    <span class="popup__message"></span>
+    <span class="pop-up__message"></span>
   </section>
 </body>
 </html>
