--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vanilla-Javascript-Exercise</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,300&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+  </style>
+  <style>
     body { text-align: center; font-family: 'Roboto', sans-serif; }
-    section { margin: auto; width: 400px; }
+    section { margin: auto; width: 375px; }
     header { margin: 32px; }
-    a { color: black; font-size: 20px; }
+    a { color: black; font-size: 16px; font-weight: 400; }
     li { text-align: left; }
   </style>
 </head>
 <body>
   <section>
-    <h1>Vanilla Javascript Exercise</h1>
+    <h2>Vanilla Javascript Exercise</h2>
     <ul>
       <li><a href='./Shopping List/index.html'>Shopping List</a></li>
+      <li><a href='./Game/index.html'>Mini Game: Carrot🥕</a></li>
     </ul>
   </section>
 </body>
