Fix fontawesome kit code

--- a/Game/index.html
+++ b/Game/index.html
@@ -6,10 +6,7 @@
 	<title>Game</title>
 	<link rel="stylesheet" href="style.css">
   <script src="./main.js" defer></script>
-  <script 
-  src="http://kit.fontawesome.com/9eb162ac0d.js" 
-  crossorigin="anonymous">
-</script>
+  <script src="https://kit.fontawesome.com/6265d5712d.js" crossorigin="anonymous"></script>
 </head>
 <body>
 	<section class='game'>
