--- a/Game/index.html
+++ b/Game/index.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Game</title>
-	<link rel="stylesheet" href="style.css">
-  <script src="./main.js" defer></script>
+  <title>Game</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="#" type="image/x-icon"> 
+  <script type="module" src="src/main.js" defer></script>
   <script src="https://kit.fontawesome.com/6265d5712d.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -18,8 +19,6 @@
       <span class='game__score'></span>
     </header>
     <div class="game__field">
-      <!-- <img src="./img/carrot.png" alt="carrot" class="carrot"> -->
-      <!-- <img src="./img/bug.png" alt="bug" class="bug"> -->
     </div>
   </section>
   <section class="pop-up pop-up__hide">
@@ -28,5 +27,3 @@
   </section>
 </body>
 </html>
-
-<style type="text/css"></style>
