--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vanilla-Javascript-Exercise</title>
+  <title>Vanilla Javascript Practice</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-  </style>
-  <style>
-    body { text-align: center; font-family: 'Roboto', sans-serif; }
+    body { text-align: center; font-family: 'Roboto', sans-serif;  }
     section { margin: auto; width: 375px; }
-    header { margin: 32px; }
-    a { color: black; font-size: 16px; font-weight: 400; }
-    li { text-align: left; }
+    header { margin-top: 40px; font-weight: 500; }
+    ul { list-style: none;}
+    li { text-align: left; font-size: 18px; font-weight: 300; line-height: 32px }
+    a { color: black; }
   </style>
 </head>
 <body>
   <section>
-    <h2>Vanilla Javascript Exercise</h2>
+    <h1>Vanilla Javascript Practice</h1>
     <ul>
-      <li><a href='./Shopping List/index.html'>Shopping List</a></li>
-      <li><a href='./Game/index.html'>Mini Game: Carrot🥕</a></li>
+      <li><a href='./Shopping List/index.html'>🛍 Shopping list</a></li>
+      <li><a href='./Game/index.html'>🕹 Mini game - Carrot pick 🥕🥕🥕</a></li>
     </ul>
   </section>
 </body>
